para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/26.AMZ
#import "../24.AMZ";
int main() {
	return a();
}

int a() {
	return 2;
}
